fix: Projects not visible

--- a/src/components/CSS/Projects.css
+++ b/src/components/CSS/Projects.css
@@ -1,37 +1,32 @@
-/* Contact.css */
+.project {
+  margin-bottom: 20px;
+}
 
-#contact {
-    margin-top: 50px;
-  }
-  
-  h1 {
-    color: #333;
-  }
-  
-  h3 {
-    color: #333;
-    margin-top: 20px;
-  }
-  
-  p {
-    margin-bottom: 10px;
-    color: #666;
-  }
-  
-  iframe {
-    width: 100%;
-    height: 300px;
-    border: 0;
-    border-radius: 10px;
-    margin-top: 10px;
-  }
-  
-  figcaption {
-    margin-top: 10px;
-    font-size: 12px;
-    color: #888;
-    text-align: right;
-  }
-  
-  /* Add any additional styles based on your design */
-  
+.image-container {
+  display: flex;
+}
+
+.image-container img {
+  max-width: 100%;
+  margin-right: 10px;
+}
+
+.project-details {
+  background-color: #f5f5f5;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 20px 0;
+}
+
+.project-details h2 {
+  color: #333;
+  font-size: 28px;
+  margin-bottom: 15px;
+}
+
+.project-details p {
+  color: #666;
+  font-size: 16px;
+  line-height: 1.6;
+}
